Add html for page

--- a/index.html
+++ b/index.html
@@ -10,6 +10,58 @@
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
-		
+		<section>
+			<div class="container">
+				<h1 class="title">Hit It And Quit It</h1>
+				<h4 class="artist">by Funkadelic</h4>
+			</div>
+			<div class="container">
+				<p class="text">
+					I want you to hit it, good God<br>
+					Hit it and quit it<br>
+					I want you to, oh, oh, yeah<br>
+					Oh, mama, hit it, good God<br>
+					Hit it and quit it<br>
+					I want you to, oh, mama, ooh, yeah<br>
+					Oh, mama, hit it, good God<br>
+					Hit it and quit it<br>
+					I want you to, ooh-ooh-ooh, yeah, ooh, yeah<br>
+					<br>
+					You can shake it to the east, shake it to the west<br>
+					Hit it, good God<br>
+					Hit it and quit it<br>
+					Yeah, all up and down and all movin' all around<br>
+					Hit it, good God<br>
+					Hit it and quit it, yeah<br>
+					You can shake it for dinner or you could spread it all around<br>
+					Hit it, good God<br>
+					Hit and quit it<br>
+					<br>
+					I want you to hit it and quit it<br>
+					I want you to hit it and quit it<br>
+					I want you to hit it and quit it<br>
+					I want you to hit it and quit it<br>
+					I want you to hit it and quit it<br>
+					I want you to hit it and quit it<br>
+					I want you to hit it and quit it<br>
+					I want you to hit it and quit it<br>
+					I want you to hit it and quit it<br>
+					I want you to hit it and quit it<br>
+					And quit it<br>
+					<br>
+					You can shake it to the east, shake it to the west<br>
+					Hit it, good God<br>
+					Hit it and quit it<br>
+					You can shake it to the one you love the best<br>
+					Hit it, ha<br>
+					Hit it and quit it, ahh, good God<br>
+					Hit it and quit it, ooh, good God<br>
+					Hit it and quit it, oh, good God<br>
+					Hit it and quit it, quit it, quit it<br>
+					<br>
+					Okay, play that from the top
+				</p>
+			</div>
+		</section>
 	</body>
 </html>
