Update content of index.html

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<section>
 			<div class="container">
 				<h1 class="title">Hit It And Quit It</h1>
-				<h4 class="artist">by Funkadelic</h4>
+				<h4 class="artist">Funkadelic</h4>
 			</div>
 			<div class="container">
 				<p class="text">
