--- a/index.html
+++ b/index.html
@@ -63,7 +63,9 @@
 				</p>
 			</div>
 			<div class="container">
-				<h4 class="description">From "Maggot Brain", 1971</h4>
+				<h4 class="description">From "Maggot Brain", 1971
+					Written By William Nelson & George Clinton
+				</h4>				
 			</div>
 		</section>
 	</body>
