--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
 				</p>
 			</div>
 			<div class="container">
-				<h4 class="description">From "Maggot Brain", 1971
-					Written By William Nelson & George Clinton
+				<h4 class="description">From <span>"Maggot Brain", 1971
+					Written By William Nelson & George Clinton</span>
 				</h4>				
 			</div>
 		</section>
