Update description text

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 				</p>
 			</div>
 			<div class="container">
-				<h4 class="description">From <span>"Maggot Brain", 1971
+				<h4 class="description">From <span>"Maggot Brain", 1971<br>
 					Written By William Nelson & George Clinton</span>
 				</h4>				
 			</div>
